Funneled build script logic to buildSrc